--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ LIST TIMER COMPONENTS
   height: 100%;
   background-color: #f8b657;
   border-radius: 10px;
+  transition: width 0.3s ease-in-out;
 }
 .progressing-right {
   display: flex;
