--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ LIST TIMER COMPONENTS
 */
 .grid--2-col {
   background-color: #2d343b;
-  border-radius: 10px;
+  border-radius: var(--border-radius-small);
   padding: 1.5rem 2rem;
 }
 .timer-name {
@@ -33,13 +33,13 @@ LIST TIMER COMPONENTS
   margin-top: 1rem;
   height: 0.6rem;
   background-color: #444e57;
-  border-radius: 10px;
+  border-radius: var(--border-radius-small);
 }
 .progress-bar {
   width: 70%;
   height: 100%;
   background-color: #f8b657;
-  border-radius: 10px;
+  border-radius: var(--border-radius-small);
   transition: width 0.3s ease-in-out;
 }
 .progressing-right {
@@ -53,7 +53,7 @@ LIST TIMER COMPONENTS
 }
 .breakstate {
   background-color: #1c2022;
-  border-radius: 20px;
+  border-radius: var(--border-radius-medium);
   padding: 1.2rem 2rem;
 }
 .btn-red {
@@ -63,12 +63,49 @@ LIST TIMER COMPONENTS
 .btn-add-timer {
   width: 100%;
   height: 100%;
-  border-radius: 10px;
+  border-radius: var(--border-radius-small);
   padding: 2rem 0rem;
   color: #1c2022;
   font-weight: 800;
   text-transform: uppercase;
   background-color: #f3a335;
+}
+
+/* MODAL WINDOW */
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 60rem;
+  background-color: var(--color-primary2);
+  padding: 5rem 6rem;
+  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.5);
+  border-radius: var(--border-radius-small);
+  z-index: 1000;
+  transition: all 0.5s;
+}
+.modal__form {
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+}
+.btn--cancel-modal {
+  background-color: var(--color-primary1);
+}
+.btn--add-modal {
+  background-color: var(--color-tints--yellowdark);
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(4px);
+  z-index: 100;
+  transition: all 0.5s;
 }
 
 /* /////////////////////////////////////////// */
