--- a/css/general.css
+++ b/css/general.css
@@ -134,9 +134,17 @@ button {
   letter-spacing: 0.5px;
   cursor: pointer;
   border-radius: 10px;
-  transition: all 0.5s;
+  transition: all 0.2s;
 }
-
+button:hover {
+  filter: brightness(120%);
+  box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.5);
+}
+button:active {
+  box-shadow: inset 0 2px 1px 0 rgba(0, 0, 0, 0.5);
+  color: var(--color-shades--100);
+  filter: brightness(130%);
+}
 .container {
   max-width: 120rem;
   min-height: 70vh;
